common/tf/modules/gateway/resources/gateway-test.yaml
# gateway/gateway-with-infrastructure.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "192.168.50.20" ###TODO to be validated
  listeners:
    - protocol: HTTP
      port: 80
      name: http-gateway
      hostname: "*.emisia.net"
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTP
      port: 80
      name: http-domain-gateway
      hostname: "emisia.net"
      allowedRoutes:
        namespaces:
          from: All
